--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ local.properties
 .settings/
 .loadpath
 .recommenders
+.classpath
 
 # External tool builders
 .externalToolBuilders/
@@ -89,7 +90,6 @@ local.properties
 *.zip
 *.tar.gz
 *.rar
-*.classpath
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
